--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Engineering Portfolio</title>
+  <title>Angela Moorcroft Portfolio</title>
 </head>
 <body>
   <header>
