--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Engineering Portfolio</h1>
+    <h1>Angela Moorcroft - Portfolio</h1>
   </header>
   <nav>
     <ul>
@@ -17,10 +17,10 @@
   </nav>
   <main>
     <h2>About Me</h2>
-    <p>Hi, my name is [Your Name] and I am an engineer with a background in [Your Field]. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
+    <p>Hi, my name is Angela and I am an track design engineer. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
   </main>
   <footer>
-    <p>Copyright [Your Name] [Year]</p>
+    <p>Copyright Angela Moorcroft 2022]</p>
   </footer>
 </body>
 </html>
