--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   </nav>
   <main>
     <h2>About Me</h2>
-    <p>Hi, my name is Angela and I am an track design engineer. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
+    <p>Hi, my name is Angela and I am a track design engineer. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
   </main>
   <footer>
-    <p>Copyright Angela Moorcroft 2022]</p>
+    <p>Copyright Angela Moorcroft 2022</p>
   </footer>
 </body>
 </html>
