--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Angela Moorcroft Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -16,6 +17,9 @@
     </ul>
   </nav>
   <main>
+    <div class="top-box">
+
+    </div>
     <h2>About Me</h2>
     <p>Hi, my name is Angela and I am a track design engineer. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
   </main>
