--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
   <title>Angela Moorcroft Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1>Angela Moorcroft - Portfolio</h1>
   </header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="articles.html">Articles</a></li>
-    </ul>
-  </nav>
+  <div class="top-box">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="articles.html">Articles</a></li>
+      </ul>
+    </nav>
+  </div>
   <main>
-    <div class="top-box">
 
-    </div>
     <h2>About Me</h2>
     <p>Hi, my name is Angela and I am a track design engineer. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
   </main>
