--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Angela Moorcroft - Portfolio</h1>
-  </header>
+  <div class="head-box">
+    <header>
+      <h1>Angela Moorcroft - Portfolio</h1>
+    </header>
+  </div>
+
   <div class="top-box">
     <nav>
       <ul>
@@ -19,9 +22,14 @@
     </nav>
   </div>
   <main>
+    <div class="middle-box">
+      <h2>About Me</h2>
+      <p>Hi, my name is Angela and I am a track design engineer. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
+    
 
-    <h2>About Me</h2>
-    <p>Hi, my name is Angela and I am a track design engineer. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
+    </div>
+
+
   </main>
   <footer>
     <p>Copyright Angela Moorcroft 2022</p>
