--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Angela Moorcroft Portfolio</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="main.js"> </script>
 </head>
 <body>
   <div class="head-box">
@@ -10,29 +11,31 @@
       <h1>Angela Moorcroft - Portfolio</h1>
     </header>
   </div>
+</div>
 
-  <div class="top-box">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="articles.html">Articles</a></li>
-      </ul>
-    </nav>
-  </div>
-  <main>
-    <div class="middle-box">
-      <h2>About Me</h2>
-      <p>Hi, my name is Angela and I am a track design engineer. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
-    
+<div class="top-box">
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="articles.html">Articles</a></li>
+    </ul>
+  </nav>
+</div>
 
-    </div>
+<main>
+  <h2>About Me</h2>
+  <p>Hi, my name is Angela and I am a track design engineer. I have a passion for using technology and innovation to solve complex problems and improve our world. On this site, you will find information about my background, experience, and projects, as well as articles and tutorials on a variety of engineering topics.</p>
+  
+
+</main>
 
 
-  </main>
+
+
   <footer>
-    <p>Copyright Angela Moorcroft 2022</p>
+    <!-- <p>Copyright Angela Moorcroft 2022</p> -->
   </footer>
 </body>
 </html>
